--- a/EventTrackerWebApp/public_html/css/site.css
+++ b/EventTrackerWebApp/public_html/css/site.css
@@ -107,6 +107,7 @@ nav li {
 .content-container{
     border: 1px solid #ddd;
     padding: 10px 20px;
+    margin-bottom: 30px;
 }
 .contact-container{
     border: 1px solid #ddd;
@@ -120,30 +121,71 @@ nav li {
 }
 .jumbotron{
     padding-bottom: 0;
+    padding-top: 0;
     margin: 0;
 }
 
-.carousel-inner .active.left { 
-    left: -33%; 
+/* carousel */
+.media-carousel 
+{
+  margin-bottom: 0;
+  padding: 0;
+  margin-top: 10px;
 }
-.carousel-inner .next { 
-    left:  33%; 
+/* Previous button  */
+.media-carousel .carousel-control.left 
+{
+  left: -8%;
+  background-image: none;
+  background: none repeat scroll 0 0 #222222;
+  border: 4px solid #FFFFFF;
+  border-radius: 23px 23px 23px 23px;
+  height: 40px;
+  width : 40px;
+  margin-top: 10px
 }
-.carousel-inner .prev { 
-    left: -33%; 
+/* Next button  */
+.media-carousel .carousel-control.right 
+{
+  right: 61%;
+  background-image: none;
+  background: none repeat scroll 0 0 #222222;
+  border: 4px solid #FFFFFF;
+  border-radius: 23px 23px 23px 23px;
+  height: 40px;
+  width : 40px;
+  margin-top: 10px;
 }
-.carousel-control.left,.carousel-control.right {
-    background-image:none;
+/* Changes the position of the indicators */
+.media-carousel .carousel-indicators 
+{
+    right: 50%;
+    top: auto;
+    bottom: 0px;
+    margin-right: 50px;
 }
-.item:not(.prev) {
-    visibility: visible;
+/* Changes the colour of the indicators */
+.media-carousel .carousel-indicators li 
+{
+  background: #c0c0c0;
 }
-.item.right:not(.prev) {
-    visibility: hidden;
+.media-carousel .carousel-indicators .active 
+{
+  background: #333333;
 }
-.rightest{ 
-    visibility: visible;
+.media-carousel img
+{
+  width: 250px;
+  height: 330px !important;
+  margin-bottom: 0;
 }
-#cont{
-    padding-left: 50px;
+/* End carousel */
+
+#git-text{
+    font-size: 18px;
 }
+
+.slide-img{
+    margin-bottom: 10px !important;
+}
+
