--- a/EventTrackerWebApp/public_html/css/site.css
+++ b/EventTrackerWebApp/public_html/css/site.css
@@ -94,7 +94,6 @@ nav li {
     list-style-type: none;
     padding: 0;
     border: 1px solid #ddd;
-    bottom-padding: 30px;
 }
 .about-ul li {
     padding: 8px 16px;
@@ -135,7 +134,7 @@ nav li {
 /* Previous button  */
 .media-carousel .carousel-control.left 
 {
-  left: -8%;
+  left: -12%;
   background-image: none;
   background: none repeat scroll 0 0 #222222;
   border: 4px solid #FFFFFF;
@@ -147,7 +146,7 @@ nav li {
 /* Next button  */
 .media-carousel .carousel-control.right 
 {
-  right: 61%;
+  right: -12%;
   background-image: none;
   background: none repeat scroll 0 0 #222222;
   border: 4px solid #FFFFFF;
@@ -159,10 +158,8 @@ nav li {
 /* Changes the position of the indicators */
 .media-carousel .carousel-indicators 
 {
-    right: 50%;
     top: auto;
-    bottom: 0px;
-    margin-right: 50px;
+    bottom: 0x;
 }
 /* Changes the colour of the indicators */
 .media-carousel .carousel-indicators li 
@@ -175,17 +172,11 @@ nav li {
 }
 .media-carousel img
 {
-  width: 250px;
-  height: 330px !important;
-  margin-bottom: 0;
+  width: 300px;
+  height: 350px !important;
 }
 /* End carousel */
 
 #git-text{
     font-size: 18px;
 }
-
-.slide-img{
-    margin-bottom: 10px !important;
-}
-
